erDiagram
  data_equil {
    INT id PK
    INT data_origin_id FK
    STRING folder_path
    STRING pfile
    STRING pfile_content
    STRING gfile
    STRING gfile_content
    STRING transpfile
    STRING shot_number
    FLOAT shot_time
    INT active
    STRING creation_date
    STRING shot_variant
    STRING comment
  }

  data_origin {
    INT id PK
    STRING name
    STRING origin
    STRING copy
    STRING tokamak
    STRING creation_date
    STRING color
  }

  flux_action_log {
    INT id PK
    INT data_origin_id FK
    STRING data_origin_name
    STRING flux_db_name
    STRING remote_host
    STRING remote_dir
    STRING created_at
  }

  gk_batch {
    INT id PK
    STRING batch_database_name
    STRING remote_folder
    STRING remote_host
    STRING status
  }

  gk_code {
    INT id PK
    STRING name
    STRING version
    STRING creation_date
  }

  gk_convergence_timeseries {
    INT id PK
    INT gk_run_id FK
    INT gk_input_id FK
    BLOB phi2_tot_f32
    INT n_points
    FLOAT window_t_min
    FLOAT window_t_max
    FLOAT gamma_mean
    FLOAT relstd
    FLOAT slope_norm
    STRING method
    FLOAT r2
    FLOAT ky_abs_mean
    FLOAT gamma_max
    FLOAT diffusion
    INT is_converged
    STRING creation_date
  }

  gk_input {
    INT id PK
    INT gk_study_id FK
    INT gk_model_id FK
    STRING file_name
    STRING file_path
    STRING content
    FLOAT psin
    STRING status
    STRING comment

    STRING geo_option
    FLOAT rhoc
    FLOAT Rmaj
    FLOAT R_geo
    FLOAT qinp
    FLOAT shat
    FLOAT shift
    FLOAT akappa
    FLOAT akappri
    FLOAT tri
    FLOAT tripri
    FLOAT betaprim
    FLOAT beta

    FLOAT electron_z
    FLOAT electron_mass
    FLOAT electron_dens
    FLOAT electron_temp
    FLOAT electron_temp_ev
    FLOAT electron_tprim
    FLOAT electron_fprim
    FLOAT electron_vnewk

    FLOAT ion_z
    FLOAT ion_mass
    FLOAT ion_dens
    FLOAT ion_temp
    FLOAT ion_temp_ev
    FLOAT ion_tprim
    FLOAT ion_fprim
    FLOAT ion_vnewk

    STRING creation_date
  }
  gk_model {
    INT id PK
    INT active
    INT gk_code_id FK
    INT is_linear
    INT is_adiabatic
    INT is_electrostatic
    STRING input_template
    STRING creation_date
  }

  gk_run {
    INT id PK
    INT remote_id
    INT gk_input_id FK
    INT gk_batch_id FK
    STRING input_folder
    STRING job_folder
    STRING archive_folder
    STRING input_name
    INT nb_nodes
    STRING job_id
    STRING status
    STRING input_content
    STRING remote_host
    STRING remote_folder
    STRING creation_date
    FLOAT t_max
    FLOAT ky_abs_mean
    FLOAT gamma_max
    FLOAT diffusion
    INT nb_restart
  }

  gk_study {
    INT id PK
    INT data_equil_id FK
    INT gk_code_id FK
    STRING comment
    STRING creation_date
  }

  transp_timeseries {
    INT id PK
    INT data_origin_id FK
    STRING shot_number
    STRING shot_variant
    STRING time_array
    STRING creation_date
  }

  data_origin ||--o{ data_equil : "has many"
  data_origin ||--o{ flux_action_log : "logs"
  data_origin ||--o{ transp_timeseries : "has many"
  data_equil  ||--o{ gk_study : "used by"
  gk_code     ||--o{ gk_study : "runs with"
  gk_code     ||--o{ gk_model : "templates"

  gk_study    ||--o{ gk_input : "has"
  gk_model    ||--o{ gk_input : "configured by"
  gk_batch    ||--o{ gk_run : "runs"
  gk_input    ||--o{ gk_run : "runs"
  gk_run      ||--o{ gk_convergence_timeseries : "convergence"
  gk_input    ||--o{ gk_convergence_timeseries : "convergence"
